--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
 
-    <groupId>by.eugenekulik</groupId>
+    <groupId>io.eugenekulik.gitlab</groupId>
     <artifactId>gitlab-helper</artifactId>
     <version>1.1.0</version>
 
